# Tourism

./: .gitignore  AGENTS.md  LICENSE  PROGRESS.md  Project_Atlas_开发手册_Checklist.md  Project_Atlas_开发规划书_V2.0.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 192b2beb4568_create_passport_and_badge_tables.py  20260218_0001_create_auth_tables.py  20260218_0002_create_poi_itinerary_tables.py  20260218_0003_itinerary_status_and_cover.py  20260218_0004_fork_and_snapshot.py  20260219_0005_create_itinerary_diff_actions.py  20260219_0006_create_poi_correction_tables.py  20260219_0007_ticket_rules_and_correction_context.py  20260219_0008_reactivate_non_ticket_correction_types.py  20260220_0009_professionalize_correction_types.py  20260220_0010_create_user_notifications.py  20260220_0011_add_itinerary_start_date.py  20260226_0019_editor_board_v3.py  (+7 more)
backend/app/: main.py
backend/scripts/: seed_badges.py  verify_collab_load.py  verify_e2e_flow_phase2_8.py  verify_notifications_e2e.py  verify_phase3_1_full_write_e2e.py
backend/tests/: test_ai_engine_service.py  test_block_editor_api_e2e.py  test_bounty_api_e2e.py  test_bounty_service.py  test_collab_service.py  test_diff_action_service.py  test_explore_service.py  test_fork_and_diff_service.py  test_itinerary_items_with_poi.py  test_notification_service.py  test_poi_correction_service.py  test_share_page.py  test_territory_api_e2e.py  test_territory_service.py  test_territory_service_strict.py  test_weather_service.py
(+145 files in other folders)
